[gd_scene load_steps=3 format=3 uid="uid://2xvt8scbfjnf"]

[ext_resource type="Script" path="res://scripts/ui/leaderboard_entry.gd" id="1_t6hsb"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1bm0j"]
properties/0/path = NodePath(".:username")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:kills")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:deaths")
properties/2/spawn = true
properties/2/replication_mode = 2

[node name="leaderboard_entry" type="Panel"]
custom_minimum_size = Vector2(0, 30)
script = ExtResource("1_t6hsb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="username_label" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "This was a pain to vertically center"
autowrap_mode = 0

[node name="kills_label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="deaths_label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1bm0j")
